# symgiza-pp

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h  configure  configure.ac
src/: D5Tables.h  HMMTables.h  Makefile.am  Makefile.in  MoveSwapMatrix.cpp  Vector.h  cmd.c  cmd.h  collCounts.cpp  d4norm.cxx  endSymetrize.cpp  getSentence.h  hmm.cpp  hmm.h  hmmnorm.cxx  logprob.h  mergeAlignment.cpp  model1.h  model2.cpp  model3.cpp  model3.h  mystl.h  transpair_model4.cpp  vocab.h
src/mkcls/: Array.h  GDAOptimization.h  HCOptimization.h  IterOptimization.h  KategProblem.h  KategProblemKBC.h  KategProblemTest.cpp  KategProblemWBC.h  MSBOptimization.h  MYOptimization.h  Makefile.in  PopOptimization.h  Problem.h  ProblemTest.h  RRTOptimization.h  SAOptimization.h  StatVar.h  TAOptimization.h  general.h  mkcls.cpp  myleda.h
