dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT([mgiza],[1.0])

AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_SEARCH_LIBS([strerror],[cposix])
AC_PROG_CXX

LT_INIT

AC_CONFIG_FILES([
Makefile
src/Makefile
src/mkcls/Makefile
])
AC_OUTPUT
